@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.oracle.oci.sdk</groupId>
   <artifactId>oci-java-sdk</artifactId>
-  <version>3.25.3</version>
+  <version>3.25.4</version>
   <packaging>pom</packaging>
   <name>Oracle Cloud Infrastructure SDK</name>
   <description>This project contains the SDK used for Oracle Cloud Infrastructure</description>
@@ -50,8 +50,8 @@
     <io.vavr.version>0.10.4</io.vavr.version>
     <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
     <bouncycastle.version>1.74</bouncycastle.version>
-    <mockito.version>1.10.19</mockito.version>
-    <powermock.version>1.7.4</powermock.version>
+    <mockito.version>2.18.0</mockito.version>
+    <powermock.version>2.0.2</powermock.version>
     <hk2.version>2.6.1</hk2.version>
     <net.jodah.failsafe.version>0.9.2</net.jodah.failsafe.version>
     <hamcrest.core.version>1.3</hamcrest.core.version>
@@ -266,7 +266,15 @@
       <properties>
         <argLine>
           --add-opens=java.base/java.lang=ALL-UNNAMED
+          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
           --add-opens=java.base/java.util=ALL-UNNAMED
+          --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+          --add-opens=java.base/java.io=ALL-UNNAMED
+          --add-opens=java.base/java.time=ALL-UNNAMED
+          --add-opens=java.base/java.util.regex=ALL-UNNAMED
+          --add-opens=java.base/java.util.stream=ALL-UNNAMED
+          --add-opens=java.base/java.text=ALL-UNNAMED
+          --add-opens=java.base/java.security=ALL-UNNAMED
           --add-opens=java.base/java.net=ALL-UNNAMED
           --add-opens=java.base/java.nio.channels=ALL-UNNAMED
         </argLine>
@@ -606,13 +614,13 @@
       </dependency>
       <dependency>
         <groupId>org.powermock</groupId>
-        <artifactId>powermock-api-mockito</artifactId>
+        <artifactId>powermock-api-mockito2</artifactId>
         <version>${powermock.version}</version>
       </dependency>
       <dependency>
         <groupId>org.powermock</groupId>
         <artifactId>powermock-api-mockito-common</artifactId>
-        <version>${powermock.version}</version>
+        <version>1.7.4</version>
       </dependency>
       <dependency>
         <groupId>org.powermock</groupId>
